<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/menu_add_note"
    android:title="@string/add_note"
    app:showAsAction="never" />
<item
    android:id="@+id/menu_delete_note"
    android:title="@string/delete_note"
    app:showAsAction="never" />
</menu>
